# technocracy_practice_test

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  README.md  docker-compose.yaml  pyproject.toml
accounts/: apps.py  permissions.py  serializers.py  views.py
accounts/migrations/: 0001_initial.py  0002_note_user_delete_usernote.py  0003_remove_note_user_remove_notecategory_category_and_more.py
deploy/python/: dockerfile
logic/: admin.py  models.py  serializers.py  urls.py  views.py
logic/migrations/: 0001_initial.py  0003_note_slug.py  0004_alter_note_categories_alter_note_slug.py  0005_alter_note_date.py
notes/: settings.py  urls.py
src/: .env.dev  .env.example
src/accounts/: permissions.py  serializers.py  urls.py  views.py
src/accounts/utils/: db_utils.py
src/logic/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
src/logic/migrations/: 0001_initial.py  0002_note_categories_delete_notecategory.py  0002_note_user_delete_usernote.py
src/logic/utils/: db_utils.py
src/notes/: settings.py  urls.py
src/tests/: conftest.py
src/tests/test_accounts/: factories.py
tests/: conftest.py
tests/test_accounts/: factories.py  test_views.py
tests/test_logic/: factories.py  test_views.py
utils/: db_utils.py
